Temp fix for the sidebar collapse button

--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -105,8 +105,8 @@ h2 {
 
 /* Toggle Button */
 .toggle-button {
-  position: absolute;
-  left: 310px;
+  /*position: absolute;
+  left: 310px;*/
   top: 50%;
   transform: translateY(-50%);
   background: #444;
